# fekt_pc1t_bingo

./: CMakeLists.txt  Makefile  bingo  board.c  board.h  generator.c  generator.h  main.c  options.c  options.h
